Fixed mistakes from    https://validator.w3.org/

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
     </header>
-    </div>
+
     <main>
         <h2>
             Комерційні автомобілі
@@ -225,31 +225,31 @@
         <ul id="thumbs">
           <li>
             <a href="pictures/cars/Amarok.png" title="Amarok">
-              <img class="gallery-pictures" src="pictures/cars/Amarok.png"></a>
+              <img class="gallery-pictures" src="pictures/cars/Amarok.png" alt="gallery-picture"></a>
           </li>
           <li>
             <a href="pictures/cars/Caddy-Combi.png" title="Caddy-Combi">
-              <img class="gallery-pictures" src="pictures/cars/Caddy-Combi.png"></a>
+              <img class="gallery-pictures" src="pictures/cars/Caddy-Combi.png" alt="gallery-picture"></a>
           </li>
           <li>
             <a href="pictures/cars/Caravelle.png" title="Caravelle">
-              <img class="gallery-pictures" src="pictures/cars/Caravelle.png"></a>
+              <img class="gallery-pictures" src="pictures/cars/Caravelle.png" alt="gallery-picture"></a>
           </li>
           <li>
             <a href="pictures/cars/Crafter.png" title="Crafter">
-              <img class="gallery-pictures" src="pictures/cars/Crafter.png"></a>
+              <img class="gallery-pictures" src="pictures/cars/Crafter.png" alt="gallery-picture"></a>
           </li>
           <li>
             <a href="pictures/cars/Crafter_Kasten.png" title="Crafter_Kasten">
-              <img class="gallery-pictures" src="pictures/cars/Crafter_Kasten.png"></a>
+              <img class="gallery-pictures" src="pictures/cars/Crafter_Kasten.png" alt="gallery-picture"></a>
           </li>
           <li>
             <a href="pictures/cars/Multivan.png" title="Multivan">
-              <img class="gallery-pictures" src="pictures/cars/Multivan.png"></a>
+              <img class="gallery-pictures" src="pictures/cars/Multivan.png" alt="gallery-picture"></a>
           </li>
           <li>
             <a href="pictures/cars/Transporter-Combi.png" title="Transporter-Combi">
-              <img class="gallery-pictures" src="pictures/cars/Transporter-Combi.png"></a>
+              <img class="gallery-pictures" src="pictures/cars/Transporter-Combi.png" alt="gallery-picture"></a>
           </li>
         </ul>
         <p><img id="largeImg" src="pictures/cars/Amarok.png" alt="Large image"></p>
@@ -312,12 +312,16 @@
                 </li>
             </ul>
             <ul class = "footer-category">
-                <div class="search" >
-                    <input type="text" placeholder="Що вас цікавить?">
-                    <button>
-                        Пошук
-                    </button>
-                </div>
+                <li>
+                    <div class="search" >
+                        <input type="text" placeholder="Що вас цікавить?">
+                        <button>
+                            Пошук
+                        </button>
+                    </div>
+                </li>
+
+
             </ul>
         </nav>
     </footer> 
