Added <span> "До огляду"

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <div class="price">від 950 000 грн</div>
                         <div class="view">
                             <a class="product-link-view" href="Amarok">
-                                До огляду
+                                <span>До огляду</span>
                             </a>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                         <div class="price">від 750 000 грн</div>
                         <div class="view">
                             <a class="product-link-view" href="Caddy-Combi">
-                                До огляду
+                                <span>До огляду</span>
                             </a>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                         <div class="price">від 1 500 000 грн</div>
                         <div class="view">
                             <a class="product-link-view" href="Caravelle">
-                                До огляду
+                                <span>До огляду</span>
                             </a>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                         <div class="price">від 800 000 грн</div>
                         <div class="view">
                             <a class="product-link-view" href="Crafter_Kasten">
-                                До огляду
+                                <span>До огляду</span>
                             </a>
                         </div>
                     </div>
@@ -147,7 +147,7 @@
                         <div class="price">від 700 000 грн</div>
                         <div class="view">
                             <a class="product-link-view" href="Crafter">
-                                До огляду
+                                <span>До огляду</span>
                             </a>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
                         <div class="price">від 1 200 000 грн</div>
                         <div class="view">
                             <a class="product-link-view" href="Transporter-Combi">
-                                До огляду
+                                <span>До огляду</span>
                             </a>
                         </div>
                     </div>
@@ -186,7 +186,7 @@
                         <div class="price">від 1 700 000 грн</div>
                         <div class="view">
                             <a class="product-link-view" href="Multivan">
-                                До огляду
+                                <span>До огляду</span>
                             </a>
                         </div>
                     </div>
